--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,21 +1,47 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Books</title>
-    <%= csrf_meta_tags %>
+<head>
+  <title>Books</title>
+  <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+</head>
 
-  <body>
+<body>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light" style="padding: 15px">
+  <%- if current_user %>
+      <%= image_tag('1.jpg', {style: 'width: 30px;'}) %>
+      <%= link_to('Book  Sharing Magazine', root_path, class: 'navbar-brand', style: 'margin: 15px') %>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
 
-    <%=
-      yield
-    %>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <strong>Logged as: </strong> <div class="log"><%= current_user.email %></div>
+          </li>
+        </ul>
 
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <%= link_to('Create book', new_book_path, class: 'btn btn-primary btn-lg btn-block', style: 'margin: 10px') %>
+          </li>
+        </ul>
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <%= link_to('Logout', destroy_user_session_path, method: 'delete', class:  'btn btn-danger btn-lg btn-block', style: 'margin: 10px', data: {confirm: "Quit?"}) %>
+          </li>
+        </ul>
+      </div>
+      </nav>
+  <% end %>
 
-   
+  <%= bootstrap_flash %>
+  <%= yield %>
+
   </body>
 </html>
