--- a/app/views/layouts/book.html.erb
+++ b/app/views/layouts/book.html.erb
@@ -11,11 +11,13 @@
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light" style="padding: 15px">
+  <%- if current_user %>
   <%= image_tag('1.jpg', {style: 'width: 30px;'}) %>
   <%= link_to('Book  Sharing Magazine', root_path, class: 'navbar-brand', style: 'margin: 15px') %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
+
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
@@ -36,6 +38,7 @@
     </ul>
   </div>
 </nav>
+  <% end %>
 
 
 <%=
