--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -22,19 +22,20 @@
   <div class="media">
   <!-- <img class="mr-3" src="" alt="Generic placeholder image"> -->
   <div class="media-body">
-    <h5 class="mt-0"><%= comment.username %></h5>
+    <h5 class="mt-0"><strong><%= comment.username %></strong><p><%= comment.created_at.strftime("%m/%d/%Y %R") %></p></h5>
     <%= comment.usertext %>
    </div>
    </div>
    <% end %>
    </div>
 
+   <!-- params[:usertext] <% @book_id == params[:book_id] %> -->
 
-  <%= form_tag(controller: 'books', action: 'create_comment', method: 'post') do %>
+  <%= form_tag(controller: 'books', action: 'create_comment', method: 'post') do |comment| %>
   <div class="form-group">
-    <label class="form-control-label" for="formGroupExampleInput2"><%= current_user.email %></label>
-    <% @book_id == params[:book_id] %>
-    <%= text_area(:usertext, params[:usertext], class: 'form-control', size: '20x10', style: 'resize:none') %>       
+    <label class="form-control-label" for="formGroupExampleInput2">
+    <%= current_user.email %></label>
+    <%= text_area_tag('usertext', params[:usertext], :class => 'form-control', size: '20x10', style: 'resize:none') %>       
   </div>
   <div class="text-center">
    <%= submit_tag("Comment", :class => "btn btn-primary") %>
@@ -42,7 +43,7 @@
   </div>  
 </div>
   <% end %>
-  
+
  <table class='table table-striped text-center'>
   <thead>
     <tr>
