--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -3,28 +3,9 @@
 <%= form_for(@book) do |book| %>
 
 
-    <form>
-      <div class="form-group">
-        <label class="form-control-label" for="formGroupExampleInput">Choose your image:</label>
-        <%= book.file_field(:image, :class => "form-control-file") %>
-      </div>
-      <div class="form-group">
-        <label class="form-control-label" for="formGroupExampleInput">Enter book name:</label>
-        <%= book.text_field(:name, :class => "form-control", :placeholder => "Book name goes here, limit 20 symbols") %>
-      </div>
-      <div class="form-group">
-        <label class="form-control-label" for="formGroupExampleInput">Enter book rating:</label>
-        <%= book.text_field(:rating, class: 'form-control' ) %>
-      </div>
-      <div class="form-group">
-        <label class="form-control-label" for="formGroupExampleInput2">Book author</label>
-        <%= book.text_field(:author, :class => "form-control", :placeholder => "Book author goes here") %>
-      </div>
-      <div class="form-group">
-        <label class="form-control-label" for="formGroupExampleInput2">Book description</label>
-        <%= book.text_area(:description, :class => "form-control", :placeholder => "Book description goes here", :size => '20x10',
-                           :style => "resize:none;") %>
-      </div>
+    <%= render(partial: 'form', locals: {book: book}) %>
+    <div class="text-center">
       <%= book.submit("UpdateBook", :class => "btn btn-primary") %>
+    </div>
     </form>
 <% end %>
